# Spectrum-analyzer

./: .gitignore  CMakeLists.txt  analyzer.py
cpp-analyzer/: .clang-format  CMakeLists.txt  conanfile.txt
cpp-analyzer/include/: amplitudeplot.h  audioanalyzer.h  audioconverter.h  audioplayer.h  audiorecorder.h  audiostreammanager.h  fft.h  fourier.h  frequencyplot.h  gainerwidget.h  mainwindow.h  plot.h  ringbuffer.h  utils.h
cpp-analyzer/include/alsa/: audioplayer.h  audiorecorder.h  constants.h
cpp-analyzer/include/media/: audiodevicesource.h  audiofilesource.h  audioplayer.h  audiorecorder.h  audiosource.h  constants.h  iaudiorecorder.h  iaudiosource.h
cpp-analyzer/include/plugins/: gainer.h  limiter.h  pipeline.h  pipelinesink.h  pipelinesource.h  plugin.h  types.h
cpp-analyzer/include/widgets/: amplitudeplot.h  frequencyplot.h  plot.h
cpp-analyzer/src/: amplitudeplot.cpp  audioanalyzer.cpp  audioconverter.cpp  audioplayer.cpp  audiorecorder.cpp  audiostreammanager.cpp  fft.cpp  fourier.cpp  frequencyplot.cpp  gainerwidget.cpp  mainwindow.cpp  plotcontroller.cpp  utils.cpp
cpp-analyzer/src/alsa/: audioplayer.cpp  audiorecorder.cpp
cpp-analyzer/src/audio/converter/: audioconverter.cpp
cpp-analyzer/src/audio/manager/: audiostreammanager.cpp  audiostreammanager.h
cpp-analyzer/src/audio/session/: audiosessionconfig.h
cpp-analyzer/src/controllers/: authorizationcontroller.cpp  authorizationcontroller.h  plotcontroller.cpp  plotcontroller.h  plugincontroller.cpp  plugincontroller.h  registrationcontroller.cpp  registrationcontroller.h  validationcontroller.cpp  validationcontroller.h
cpp-analyzer/src/core/: main.cpp  utils.cpp  utils.h
cpp-analyzer/src/interfaces/: iaudiosource.h
cpp-analyzer/src/media/: audiodevicesource.cpp  audiofilesource.cpp  audioplayer.cpp  audiorecorder.cpp  audiosource.cpp  constants.h  iaudiorecorder.cpp
cpp-analyzer/src/media/players/: audioplayer.cpp  audioplayer.h
cpp-analyzer/src/media/sources/: audiodevicesource.cpp  audiodevicesource.h  audiofilesource.cpp  audiofilesource.h  audiosource.cpp  audiosource.h
cpp-analyzer/src/plugins/: gainer.cpp  limiter.cpp  pipeline.cpp  pipelinesink.cpp  pipelinesource.cpp
cpp-analyzer/src/plugins/base/: plugin.h  types.h
cpp-analyzer/src/plugins/effects/: filter.cpp  filter.h  gainer.cpp  gainer.h  limiter.cpp  limiter.h
cpp-analyzer/src/plugins/pipeline/: pipeline.cpp  pipeline.h  pipelinesink.cpp  pipelinesink.h  pipelinesource.cpp  pipelinesource.h
cpp-analyzer/src/ui/widgets/: amplitudeplot.cpp  filterwidget.cpp  filterwidget.h  filterwidget.ui  frequencyplot.cpp  gainerwidget.cpp  gainerwidget.h  gainerwidget.ui  ipluginwidget.h  limiterwidget.cpp  limiterwidget.h  limiterwidget.ui  pluginitemwidget.cpp  pluginitemwidget.h  pluginitemwidget.ui  pluginselector.cpp  pluginselector.h  pluginselector.ui  pluginwidgetfactory.cpp  pluginwidgetfactory.h
cpp-analyzer/src/ui/windows/: analyzerform.cpp  analyzerform.h  analyzerform.ui  authorizationform.cpp  authorizationform.h  authorizationform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotsform.cpp  plotsform.h  plotsform.ui  pluginslistform.cpp  pluginslistform.h  pluginslistform.ui  registrationform.cpp  registrationform.h  registrationform.ui
cpp-analyzer/src/widgets/: amplitudeplot.cpp  frequencyplot.cpp
cpp-analyzer/ui/: analyzerform.cpp  analyzerform.h  analyzerform.ui  gainerwidget.ui  mainwindow.ui  pluginslistform.cpp  pluginslistform.h  pluginslistform.ui
include/: amplitudeplot.h  audioplayer.h  audiorecorder.h  fft.h  iobuffer.h  mainwindow.h  plot.h  ringbuffer.h
python-analyzer/spectrum_analyser/: analyzer.py  graph.py  main.py
src/: amplitudeplot.cpp  audioplayer.cpp  audiorecorder.cpp  frequencyplot.cpp  iobuffer.cpp  mainwindow.cpp
ui/: mainwindow.ui
